@@ -34,11 +34,18 @@ GRUB_MOD_LICENSE ("GPLv3+");
 
 struct grub_acorn_boot_block
 {
-  grub_uint8_t misc[0x1C0];
-  struct grub_filecore_disc_record disc_record;
-  grub_uint8_t flags;
-  grub_uint16_t start_cylinder;
-  grub_uint8_t checksum;
+  union
+  {
+    struct
+    {
+      grub_uint8_t misc[0x1C0];
+      struct grub_filecore_disc_record disc_record;
+      grub_uint8_t flags;
+      grub_uint16_t start_cylinder;
+      grub_uint8_t checksum;
+    } __attribute__ ((packed, aligned));
+    grub_uint8_t bin[0x200];
+  };
 } __attribute__ ((packed, aligned));
 
 struct linux_part
@@ -71,7 +78,7 @@ acorn_partition_map_find (grub_disk_t disk, struct linux_part *m,
     goto fail;
 
   for (i = 0; i != 0x1ff; ++i)
-    checksum = (checksum & 0xff) + (checksum >> 8) + boot.misc[i];
+    checksum = ((checksum & 0xff) + (checksum >> 8) + boot.bin[i]);
 
   if ((grub_uint8_t) checksum != boot.checksum)
     goto fail;
